--- a/recursao.ipynb
+++ b/recursao.ipynb
@@ -124,6 +124,27 @@
     "    \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agora que já temos as funções necessárias, basta aplicá-las recursivamente para ordenar uma lista."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ord(xs):\n",
+    "    \"\"\"\n",
+    "    função para ordenar uma lista\n",
+    "    \"\"\"\n",
+    "    if len(xs)==1: return xs\n",
+    "    else: return insord(xs[0], ord(xs[1:]))"
+   ]
   }
  ],
  "metadata": {
